Added /token/generate and /token/refresh tests